--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
     "target": "dev-server-realmotorjapan",
+    "public": "out",
     "source": ".",
     "ignore": [
       "firebase.json",
