2nd commit ver5.2.3

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # @generated: @expo/next-adapter@2.1.0
 node_modules/**/*
+firebase-admin-key.json
+firebase-admin-key.json.base64
 .expo/*
 npm-debug.*
 *.jks
