--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,10 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     env:
       FIREBASE_CLI_EXPERIMENTS: webframeworks
-      FIREBASE_SERVICE_ACCOUNT_JSON: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SAMPLERMJ }}
+
     steps:
-    
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Decode Firebase Service Account JSON
+        env:
+          BASE64_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}
+        run: echo $BASE64_KEY | base64 --decode > firebase-admin-key.json
 
       - name: Install dependencies and build
         run: npm ci && npm run build
@@ -22,6 +27,6 @@ jobs:
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SAMPLERMJ }}
+          firebaseServiceAccount: firebase-admin-key.json
           channelId: live
           projectId: samplermj
