--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@next/bundle-analyzer": "^15.1.6",
     "@swc/core": "^1.10.14",
+    "dotenv": "^16.4.7",
     "expo": "^52.0.16",
     "firebase": "^11.2.0",
     "firebase-admin": "^12.0.0",
