--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Decode Firebase Service Account JSON
         env:
           BASE64_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}
-        run: echo $BASE64_KEY | base64 --decode > firebase-admin-key.json
+        run: echo "$BASE64_KEY" | base64 --decode > firebase-admin-key.json
 
       - name: Install dependencies and build
         run: npm ci && npm run build
