--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,7 +20,7 @@ jobs:
           BASE64_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}
         run: |
           echo "$BASE64_KEY" | base64 --decode > firebase-service-account.json
-          
+
       - name: Install dependencies and build
         run: npm ci && npm run build
 
@@ -28,6 +28,8 @@ jobs:
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: '${{ cat firebase-service-account.json }}'
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}
           channelId: live
           projectId: samplermj
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ./firebase-service-account.json
