--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,7 +19,8 @@ jobs:
         env:
           BASE64_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}
         run: |
-          echo "$BASE64_KEY" | base64 --decode > firebase-service-account.json
+          # Place the file relative to firebaseConfig directory
+          echo "$BASE64_KEY" | base64 --decode > ./firebaseConfig/firebase-admin-key.json
 
       - name: Install dependencies and build
         run: npm ci && npm run build
@@ -32,4 +33,4 @@ jobs:
           channelId: live
           projectId: samplermj
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ./firebase-service-account.json
+          GOOGLE_APPLICATION_CREDENTIALS: ./firebaseConfig/firebase-admin-key.json
