--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,17 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       FIREBASE_CLI_EXPERIMENTS: webframeworks
+      FIREBASE_SERVICE_ACCOUNT_BASE64: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Decode Firebase Service Account JSON
-        env:
-          BASE64_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}
-        run: |
-          # Place the file relative to firebaseConfig directory
-          echo "$BASE64_KEY" | base64 --decode > ./firebaseConfig/firebase-admin-key.json
 
       - name: Install dependencies and build
         run: npm ci && npm run build
@@ -32,5 +26,3 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}
           channelId: live
           projectId: samplermj
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ./firebaseConfig/firebase-admin-key.json
