--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,27 +1,26 @@
-name: Deploy to Firebase Hosting on merge
+name: Deploy to Firebase App Hosting
 
 on:
   push:
     branches:
-      - main
+      - main  # or your chosen branch
 
 jobs:
-  build_and_deploy:
+  deploy:
     runs-on: ubuntu-latest
-    env:
-      FIREBASE_CLI_EXPERIMENTS: webframeworks
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Install dependencies and build
-        run: npm ci && npm run build
-
-      - name: Deploy to Firebase Hosting
-        uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseToken: ${{ secrets.FIREBASE_TOKEN }}
-          channelId: live
-          projectId: samplermj
+          node-version: '16'
+      - name: Install Firebase Tools
+        run: npm install -g firebase-tools
+      - name: Write Service Account Key
+        run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SAMPLERMJ }}" > $HOME/firebase-key.json
+      - name: Deploy to Firebase
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: $HOME/firebase-key.json
+        run: firebase deploy --project your-firebase-project-id --only hosting
