--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -3,7 +3,7 @@ name: Deploy to Firebase App Hosting
 on:
   push:
     branches:
-      - main  # or your chosen branch
+      - main  # adjust if needed
 
 jobs:
   deploy:
@@ -16,11 +16,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+
       - name: Install Firebase Tools
         run: npm install -g firebase-tools
-      - name: Write Service Account Key
-        run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SAMPLERMJ }}" > $HOME/firebase-key.json
+
       - name: Deploy to Firebase
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: $HOME/firebase-key.json
-        run: firebase deploy --project your-firebase-project-id --only hosting
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: firebase deploy --project samplermj --only hosting
