--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,11 @@ yarn-error.log*
 
 # misc
 .DS_Store
-.env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
 
 .next
 
