--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "react-native-super-grid": "^6.0.1",
     "react-native-svg": "^15.11.1",
     "react-native-web": "~0.19.6",
-    "uglify-js": "^3.19.3",
-    "@expo/next-adapter": "^6.0.0",
+    "uglify-js": "^3.19.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-transform-flow-strip-types": "^7.26.5",
+    "@expo/next-adapter": "^6.0.0",
     "babel-loader": "^9.2.1",
     "cross-env": "^7.0.3",
     "esbuild": "^0.19.2",
