--- a/package.json
+++ b/package.json
@@ -4,26 +4,38 @@
     "@next/bundle-analyzer": "^15.1.6",
     "@swc/core": "^1.10.14",
     "axios": "^1.7.9",
+    "canvas": "^3.1.0",
     "dotenv": "^16.4.7",
     "expo": "^52.0.16",
+    "expo-document-picker": "^11.2.2",
     "firebase": "^11.2.0",
     "firebase-admin": "^12.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
+    "native-base": "^3.4.28",
     "next": "^14.2.4",
     "next-transpile-modules": "^10.0.1",
+    "normalize-css-color": "^1.0.2",
+    "pdfjs-dist": "^2.10.377",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-image-gallery": "^1.4.0",
     "react-native": "0.76.3",
+    "react-native-calendars": "^1.1302.0",
+    "react-native-qrcode-svg": "^6.3.1",
     "react-native-super-grid": "^6.0.1",
     "react-native-svg": "^15.11.1",
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.6",
     "uglify-js": "^3.19.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-flow-strip-types": "^7.26.5",
     "@expo/next-adapter": "^6.0.0",
     "babel-loader": "^9.2.1",
